{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 247,
  "lineage": "17aafbd0-65c8-d6af-93d7-00cad161d142",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allowssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-13T07:06:37.100-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allowssh",
            "name": "allowssh",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/networks/network1",
            "priority": 1000,
            "project": "coral-shoreline-234300",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/firewalls/allowssh",
            "source_ranges": [
              "88.156.131.231/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allowwww",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-13T07:06:37.114-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allowwww",
            "name": "allowwww",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/networks/network1",
            "priority": 1000,
            "project": "coral-shoreline-234300",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/firewalls/allowwww",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "www-serwer",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20191014",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/zones/europe-west3-b/disks/terraform-www"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "terraform-www",
            "instance_id": "1686176902456386292",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "terraform:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDWRCPT02nNoPEoc2cgcZvsQKjIdLnG5HaNqDZkDTWFiUVU4Wy5+NJmPOO831CBF0c7+PAsMQLETng6eQCCB0o8pviK1+BNJMXgKzKaQnavQToFHB2zZl3BDLF6ZU3GkpLuMiNjrXPa9/kK7hIgCxL2W1VFCTVCboanAqcPPbZon1565W4Z//fe42e6zYQoFrckAS9hwIypnWlw7+zvYfqc1rPwvvms6msga+YJgEfg22Fbq0luqOmhxZ3Ib2s1IoCKURSHyCps90Wc+u3+gnFlTZKgemT5Us+Nx8ioA+qpHtqsDwo829puPt1MXWRaGTONKhIl+4AFhi1RWMXmdF1d oskar@MacBook-Pro-Oskar.local\n"
            },
            "metadata_fingerprint": "turKukEto2A=",
            "name": "terraform-www",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.198.111.184",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/networks/network1",
                "network_ip": "10.132.4.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/regions/europe-west3/subnetworks/subnetwork1",
                "subnetwork_project": "coral-shoreline-234300"
              }
            ],
            "project": "coral-shoreline-234300",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/zones/europe-west3-b/instances/terraform-www",
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "zone": "europe-west3-b"
          },
          "depends_on": [
            "google_compute_subnetwork.subnetwork1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "network1",
            "name": "network1",
            "project": "coral-shoreline-234300",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/networks/network1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-11-13T07:06:37.619-08:00",
            "enable_flow_logs": false,
            "fingerprint": "GqaZXGPHBxU=",
            "gateway_address": "10.132.4.1",
            "id": "europe-west3/subnetwork1",
            "ip_cidr_range": "10.132.4.0/24",
            "name": "subnetwork1",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/networks/network1",
            "private_ip_google_access": false,
            "project": "coral-shoreline-234300",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/regions/europe-west3/subnetworks/subnetwork1"
          },
          "depends_on": [
            "google_compute_network.network1"
          ]
        }
      ]
    }
  ]
}